[package]
name = "L0_WB"
version = "0.1.0"
edition = "2021"

[dependencies]

axum = "0.7.5"
tokio = { version = "1.40.0", features = ["full"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
tower = "0.5.0"
tokio-postgres = { version = "0.7.11", features = ["with-chrono-0_4"] }
deadpool-postgres = "0.14.0"
bb8 = "0.8.5"
bb8-postgres = "0.8.1"
sqlx = { version = "0.8.1", features = ["runtime-tokio-native-tls", "postgres"] }
dotenv = "0.15.0"
uuid = {version = "1.10.0", features = ["v4"]}
chrono = "0.4"
log = "0.4.22"
env_logger = "0.11.5"
validator = { version = "0.18.1", features = ["derive"] }
validator_derive = "0.18.2"
reqwest = { version = "0.12.7", features = ["json"] }


[[bin]]
name = "L0_WB"
path = "src/main.rs"

[[bin]]
name = "test_api"
path = "src/test_api.rs"